# agent-traffic-light

./: .gitignore  DEEP_DIVE.md  PRESENTATION_PLAN.md  README.md  config.py  main.py  pyproject.toml
agent/: baseline.py  hyperopt.py  ppo_agent.py
api/: server.py
environment/: __init__.py  traffic_env.py  traffic_logic.py  wrappers.py
notebooks/: analysis.ipynb
scripts/: evaluate.py  generate_plots.py  run_api.py  train.py
state/: redis_manager.py
tests/: test_agent.py  test_api.py  test_env.py
visualization/: plots.py  renderer.py
